Styling changes mainly for fixing vertical and horizontal alignments. Added external link icons for links on resume and home pages.

--- a/src/components/SingleProj/SingleProj.module.css
+++ b/src/components/SingleProj/SingleProj.module.css
@@ -70,9 +70,13 @@
     align-self: flex-start;
     flex: 2 1 0;
     margin-top: 1%;
+    padding-inline: 0;
 
     @media (max-width: 48em) {
         margin-top: 0;
+    }
+    @media (max-width: 75em) {
+        margin: 0 auto;
     }
 }
 
